<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:text="Subjective happiness scale"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="@android:color/white"
        android:text="@string/shs_explanation"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="@android:color/white"
        android:text="@string/shs_q1"/>
    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/surveysShsQ1SeekBar"
        app:dsb_min="0"
        app:dsb_max="4"
        style="@style/Widget.AppCompat.SeekBar.Discrete"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="@android:color/white"
        android:text="@string/shs_q2"/>
    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/surveysShsQ2SeekBar"
        app:dsb_min="0"
        app:dsb_max="4"
        style="@style/Widget.AppCompat.SeekBar.Discrete"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="@android:color/white"
        android:text="@string/shs_q3"/>
    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/surveysShsQ3SeekBar"
        app:dsb_min="0"
        app:dsb_max="4"
        style="@style/Widget.AppCompat.SeekBar.Discrete"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="@android:color/white"
        android:text="@string/shs_q4"/>
    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/surveysShsQ4SeekBar"
        app:dsb_min="0"
        app:dsb_max="4"
        style="@style/Widget.AppCompat.SeekBar.Discrete"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Submit"
        android:id="@+id/shsSubmitButton"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>
</LinearLayout>