<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:paddingBottom="10dp"
                    android:textSize="15dp"
                    android:text="@string/pwb_explanation"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/pwb_q1"
                    android:paddingTop="10dp"
                    android:textSize="15dp"/>
                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/surveysPwbQ1SeekBar"
                    app:dsb_min="1"
                    app:dsb_max="7"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/pwb_q2"
                    android:paddingTop="10dp"
                    android:textSize="15dp"/>
                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/surveysPwbQ2SeekBar"
                    app:dsb_min="1"
                    app:dsb_max="7"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/pwb_q3"
                    android:paddingTop="10dp"
                    android:textSize="15dp"/>
                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/surveysPwbQ3SeekBar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    app:dsb_min="1"
                    app:dsb_max="7"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/pwb_q4"
                    android:paddingTop="10dp"
                    android:textSize="15dp"/>
                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/surveysPwbQ4SeekBar"
                    app:dsb_min="1"
                    app:dsb_max="7"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/pwb_q5"
                    android:paddingTop="10dp"
                    android:textSize="15dp"/>
                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/surveysPwbQ5SeekBar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    app:dsb_min="1"
                    app:dsb_max="7"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/pwb_q6"
                    android:paddingTop="10dp"
                    android:textSize="15dp"/>
                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/surveysPwbQ6SeekBar"
                    app:dsb_min="1"
                    app:dsb_max="7"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/pwb_q7"
                    android:paddingTop="10dp"
                    android:textSize="15dp"/>
                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/surveysPwbQ7SeekBar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    app:dsb_min="1"
                    app:dsb_max="7"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/pwb_q8"
                    android:paddingTop="10dp"
                    android:textSize="15dp"/>
                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/surveysPwbQ8SeekBar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    app:dsb_min="1"
                    app:dsb_max="7"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Submit"
                    android:id="@+id/pwbSubmitButton"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
            </LinearLayout>
</LinearLayout>